remove unecessary field of sidebar array

--- a/src/app/pages/e-learning-membership/components/create-membership/create-membership.component.html
+++ b/src/app/pages/e-learning-membership/components/create-membership/create-membership.component.html
@@ -191,7 +191,7 @@
         <div nz-col [nzSpan]="24">
           <div class="content-block" nz-row [nzGutter]=[8,8]>
             <div nz-col [nzSpan]="24" class="content-block-title">
-              {{'commission' | translate}}
+              {{'commission_policy' | translate}}
             </div>
             <nz-divider class="mt-10"></nz-divider>
 
