--- a/src/app/shared/layouts/side-bar/side-bar.component.html
+++ b/src/app/shared/layouts/side-bar/side-bar.component.html
@@ -13,11 +13,11 @@
   </div>
   <ul nz-menu nzMode="inline" theme [nzInlineCollapsed]="isCollapsed" class="menu-list">
     <ng-container *ngFor="let item of treeMenu">
-      <li *ngIf="item.children" nz-submenu [nzTitle]="item.i18n_key | translate" nzIcon="{{item.icon}}">
+      <li *ngIf="item.children" nz-submenu [nzTitle]="item.name | translate" nzIcon="{{item.icon}}">
         <app-menu-item [menuData]="item.children"></app-menu-item>
       </li>
       <li *ngIf="!item.children" nz-menu-item>
-        {{item.i18n_key | translate}}
+        {{item.name | translate}}
         <!-- {{item.name}} -->
       </li>
     </ng-container>
