--- a/src/app/pages/event/components/create-event/create-event.component.html
+++ b/src/app/pages/event/components/create-event/create-event.component.html
@@ -100,6 +100,14 @@
             {{'event_link' | translate}} {{'cannot_blank' | translate}}
           </span>
         </div>
+
+        <div nz-col [nzXs]="24" [nzSm]="12" [nzMd]="12">
+          <span class="text-label">
+            {{'description' | translate}}
+          </span>
+
+          <textarea formControlName="description" nz-input [nzAutosize]="{ minRows: 3 }"></textarea>
+        </div>
       </div>
     </form>
   </div>
