--- a/src/app/pages/news/components/create-news/create-news.component.html
+++ b/src/app/pages/news/components/create-news/create-news.component.html
@@ -64,6 +64,7 @@
           <nz-select nzMode="multiple" formControlName="showBys" style="display: block">
             <nz-option [nzValue]="1" [nzLabel]="'homepage' | translate"></nz-option>
             <nz-option [nzValue]="2" [nzLabel]="'E-Learning'"></nz-option>
+            <nz-option [nzValue]="3" [nzLabel]="'forum' | translate"></nz-option>
           </nz-select>
         </div>
 
