--- a/src/app/pages/e-learning-membership/components/config/config-detail/config-detail.component.html
+++ b/src/app/pages/e-learning-membership/components/config/config-detail/config-detail.component.html
@@ -91,6 +91,13 @@
           </span>
         </div>
 
+        <div nz-col [nzSpan]="8">
+            <span class="text-label">
+              {{'settlement_date' | translate}}
+            </span>
+           <nz-input-number formControlName="dateAgentMembershipCalculator" [nzMin]="1" [nzMax]="31" [nzStep]="1"></nz-input-number>
+        </div>
+
         <div nz-col [nzSpan]="24">
           <div class="text-label">
             KPI & {{'commissions' | translate}}
