--- a/src/app/shared/components/filter-form/filter-form.component.html
+++ b/src/app/shared/components/filter-form/filter-form.component.html
@@ -3,7 +3,7 @@
     <div nz-col nzSpan="8" *ngFor="let item of filterData" class="flex-content">
       <div nz-col nzSpan="7" class="text-align-right">
         <span>
-          {{ item.name | translate }}
+          {{ item.title | translate }}
         </span>
       </div>
 
